# gol-rs

./: Cargo.toml  LICENSE  README.md
examples/: terminal.rs
src/: lib.rs  lifealgo.rs  main.rs
src/algorithms/: gol.rs  mod.rs
src/life-rs/: lib.rs  lifealgo.rs
