[package]
name = "gol-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "life_rs"
path = "src/life-rs/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
itertools = "0.11.0"
# ndarray = { version = "0.15.6", features = ["rayon"] }